Fix edit-elder layout bugs

--- a/sass/modules/village/_elders.scss
+++ b/sass/modules/village/_elders.scss
@@ -4,12 +4,15 @@
 .village-elders {
   h2 { @extend %gone; }
 
-  .elder {
+  .elder:last-child .vcard { border-bottom: 0; }
+
+  .vcard {
     @extend %icon;
     @extend %icon-record;
     @include padding-leader(.25,$village-list-size);
     @include trailing-border(1px,.25,$village-list-size);
     @include bleed($village-bleed);
+    display: block;
     border-color: $base2;
     &:before {
       position: relative;
@@ -38,7 +41,6 @@
     #{$link} {
       @extend %village-activenav;
       @include bleed($village-bleed);
-      @include bleed(rhythm(.25,$village-list-size),top bottom);
       position: relative;
       display: block;
     }
