--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -162,14 +162,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 
 /* Use the following CSS code if you want to have a class per icon */
-.main-login .reset-link:before, .listitem-actions a:before, .listitem-actions button:before, .action-back.groups:before, .sms-info .summary:before, .getting-started .mobile:before, #messages .close:before, .school_staff-field [type="checkbox"] + .type:before, .school_staff-field [type="radio"] + .type:before, .school-field .radio-options :disabled + .type:before, .students-field .check-options :disabled + .type:before, .elders-field .check-options :disabled + .type:before, .groups-field .check-options :disabled + .type:before, .brand .wordmark:before, .meta span:before, .meta a:before, .meta button:before, .summary li:before, .benefits li:before, .additem-link:link:before, .addelder-link:link:before, .additem-link:visited:before, .addelder-link:visited:before, .parent-instructions .pdf-downloads a:before, .group .listitem-select:link:before, .group .listitem-select:visited:before, .listitem-select.removed:before, .village-elders .elder:before, .message:before, [data-icon]:before {
+.main-login .reset-link:before, .listitem-actions a:before, .listitem-actions button:before, .action-back.groups:before, .sms-info .summary:before, .getting-started .mobile:before, #messages .close:before, .school_staff-field [type="checkbox"] + .type:before, .school_staff-field [type="radio"] + .type:before, .school-field .radio-options :disabled + .type:before, .students-field .check-options :disabled + .type:before, .elders-field .check-options :disabled + .type:before, .groups-field .check-options :disabled + .type:before, .brand .wordmark:before, .meta span:before, .meta a:before, .meta button:before, .summary li:before, .benefits li:before, .additem-link:link:before, .addelder-link:link:before, .additem-link:visited:before, .addelder-link:visited:before, .parent-instructions .pdf-downloads a:before, .group .listitem-select:link:before, .group .listitem-select:visited:before, .listitem-select.removed:before, .village-elders .vcard:before, .message:before, [data-icon]:before {
   font-family: 'pyo';
   font-style: normal;
   font-weight: normal;
   speak: none;
 }
 
-.main-login .reset-link:before, .listitem-actions a:before, .listitem-actions button:before, .action-back.groups:before, .sms-info .summary:before, .getting-started .mobile:before, #messages .close:before, .school_staff-field [type="checkbox"] + .type:before, .school_staff-field [type="radio"] + .type:before, .school-field .radio-options :disabled + .type:before, .students-field .check-options :disabled + .type:before, .elders-field .check-options :disabled + .type:before, .groups-field .check-options :disabled + .type:before, .brand .wordmark:before, .meta span:before, .meta a:before, .meta button:before, .summary li:before, .benefits li:before, .additem-link:link:before, .addelder-link:link:before, .additem-link:visited:before, .addelder-link:visited:before, .parent-instructions .pdf-downloads a:before, .group .listitem-select:link:before, .group .listitem-select:visited:before, .listitem-select.removed:before, .village-elders .elder:before, .message:before {
+.main-login .reset-link:before, .listitem-actions a:before, .listitem-actions button:before, .action-back.groups:before, .sms-info .summary:before, .getting-started .mobile:before, #messages .close:before, .school_staff-field [type="checkbox"] + .type:before, .school_staff-field [type="radio"] + .type:before, .school-field .radio-options :disabled + .type:before, .students-field .check-options :disabled + .type:before, .elders-field .check-options :disabled + .type:before, .groups-field .check-options :disabled + .type:before, .brand .wordmark:before, .meta span:before, .meta a:before, .meta button:before, .summary li:before, .benefits li:before, .additem-link:link:before, .addelder-link:link:before, .additem-link:visited:before, .addelder-link:visited:before, .parent-instructions .pdf-downloads a:before, .group .listitem-select:link:before, .group .listitem-select:visited:before, .listitem-select.removed:before, .village-elders .vcard:before, .message:before {
   margin-right: .4em;
 }
 
@@ -243,7 +243,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   content: "\2713";
 }
 
-.listitem-select.removed:before, .village-elders .elder.declined:before, .message.error:before {
+.listitem-select.removed:before, .village-elders .vcard.declined:before, .message.error:before {
   content: "\2717";
 }
 
@@ -255,7 +255,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   content: "\69";
 }
 
-.village-elders .elder.inactive:before, .message.warning:before {
+.village-elders .vcard.inactive:before, .message.warning:before {
   content: "\26a0";
 }
 
@@ -267,7 +267,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   content: "\2b";
 }
 
-.village-elders .elder:before {
+.village-elders .vcard:before {
   content: "\25cf";
 }
 
@@ -279,7 +279,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   content: "\27f0";
 }
 
-.sms .sms-info .summary:before, .getting-started .mobile:before, .village-elders .elder.mobile:before {
+.sms .sms-info .summary:before, .getting-started .mobile:before, .village-elders .vcard.mobile:before {
   content: "\e000";
 }
 
@@ -2368,7 +2368,10 @@ button {
   border-left: 1px solid #93a1a1;
 }
 
-.village-elders .elder {
+.village-elders .elder:last-child .vcard {
+  border-bottom: 0;
+}
+.village-elders .vcard {
   padding-top: 0.41071em;
   border-bottom-style: solid;
   border-bottom-width: 0.07143em;
@@ -2377,31 +2380,32 @@ button {
   padding-left: 1.28571em;
   margin-right: -1.28571em;
   padding-right: 1.28571em;
+  display: block;
   border-color: #eee8d5;
 }
-.village-elders .elder:before {
+.village-elders .vcard:before {
   position: relative;
   margin-right: 0;
   color: #859900;
   z-index: 2;
 }
-.village-elders .elder.offline:before {
+.village-elders .vcard.offline:before {
   color: #b58900;
 }
-.village-elders .elder.inactive {
+.village-elders .vcard.inactive {
   background: #ffedb5;
 }
-.village-elders .elder.inactive:before {
+.village-elders .vcard.inactive:before {
   color: #93a1a1;
 }
-.village-elders .elder.mobile:before {
+.village-elders .vcard.mobile:before {
   color: #657b83;
 }
-.village-elders .elder.declined {
+.village-elders .vcard.declined {
   background: url('../images/rgbapng/dc322f20.png?1349281723');
   background: rgba(220, 50, 47, 0.125);
 }
-.village-elders .elder.declined:before {
+.village-elders .vcard.declined:before {
   color: #dc322f;
 }
 .village-elders .edit-elder, .village-elders .edit-elder:link, .village-elders .edit-elder:visited {
@@ -2409,10 +2413,6 @@ button {
   padding-left: 1.28571em;
   margin-right: -1.28571em;
   padding-right: 1.28571em;
-  margin-top: -0.41071em;
-  padding-top: 0.41071em;
-  margin-bottom: -0.41071em;
-  padding-bottom: 0.41071em;
   position: relative;
   display: block;
 }
